test/files/neg/t5892.check
t5892.scala:5: error: type mismatch;
 found   : Boolean(false)
 required: String
class C[@annot(false) X] {
               ^
one error found
